Update Verification Template

--- a/internal/templates/email_template.html
+++ b/internal/templates/email_template.html
@@ -1,7 +1,4 @@
-<!-- hello.html -->
+<!-- email_template.html -->
 <article>
-    <h1>Hi {{index . 0}}, Welcome to <span>{{index . 1}}</span>!</h1>
-    <p>Thanks for signing up for our service. We hope you enjoy using it.</p>
-    <p>Thanks,</p>
-    <p>Team {{index . 1}}</p>
+    <h1>Test Email Template</h1>
 </article>
