--- a/internal/templates/verification_code_template.html
+++ b/internal/templates/verification_code_template.html
@@ -1,4 +1,4 @@
-<!-- verification_template.html -->
+<!-- verification_code_template.html -->
 <article>
     <h1>Verification Code!</h1>
     <p>Hi {{.Name}}, <span>here is your verification code:</span></p>
